Sat Apr 15 10:02:20 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/describecol.c: fix for older Sybase versions
	* src/tds/config.c: optimize option read

Sat Apr 15 09:03:34 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/describecol.c: remove warning

Fri Apr 14 15:22:02 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/describecol.c:
	- improved

Fri Apr 14 13:55:09 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/describecol.c:
	- add test for precision returned by SQLDescribeCol

Wed Apr 12 21:41:51 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* locales.conf: fix charset typo
	* doc/userguide.sgml: fix attributes for locales.conf

Wed Apr 12 15:53:18 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/tds.h include/tds_sysdep_private.h:
	* include/tds_sysdep_public.h.in include/tdsconvert.h:
	* include/tdsver.h.in:
	- avoid ident strings in all objects
	* m4/sprintf_i64_format.m4: add Ld format

Tue Apr 11 16:33:41 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/tds_sysdep_public.h.in include/tdsver.h.in:
	- small constification

Tue Apr 11 13:51:43 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/connect.c: do not fail if not FreeTDS
	* src/odbc/unittests/raiserror.c: more verbose

Mon Apr 10 18:14:17 EDT 2006	JK Lowden <jklowden@schemamania.org>
	* include/tds.h src/apps/tsql.c src/tds/config.c
	- report sysconfdir with tsql -C

Mon Apr 10 11:59:53 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/odbc.c: cleanup

Fri Apr 07 09:38:45 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/test-other.sh: update to php 5.1
	* phptests/nextres.php: a bit more verbose

Thu Apr 06 11:37:45 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/coverage.sh: less verbose 
	* src/dblib/bcp.c: small change
